--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -28,8 +28,9 @@
       <i class="large material-icons">share</i>
     </a>
     <ul>
-      <li><a class="btn-floating red"><i class="fa fa-google-plus"></i></a></li>
+      <li><a href="http://www.facebook.com/sharer.php?u=http://www.desarrolloweb.com/manuales" class="btn-floating red" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
       <li><a class="btn-floating blue"><i class="fa fa-twitter"></i></a></li>
       <li><a class="btn-floating blue darken-4"><i class="fa fa-facebook"></i></a></li>
     </ul>
+</div>
 </div>
