--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title><%= title %></title>
-    <!--Let browser know website is optimized for mobile-->   
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name='description' content="Aplicaciones para Android, juegos , temas,herramientas, multimedia y mucho mas mejor que playstore">
+   <%= meta_tags %>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
