este es otro mas

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -45,9 +45,9 @@
 					<div class='share-post'>
 						<strong style='margin:0 0 10px;display:block; font-weight: bold;'>Comparte en:</strong>
 						<div class="row">
-						<div class="fb-share-button" data-href="https://www.facebook.com/sharer/sharer.php?u=https://dowloadapps.herokuapp.com/android/<%=@article.slug%>" data-layout="link"></div>
+						<div class="fb-share-button" data-href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>" data-layout="link"></div>
 							<div class="col-xs-4 col-sm-12 col-md-12 col-lg-12">
-						    	<li><a class='facebook' href='https://www.facebook.com/sharer/sharer.php?u=https://dowloadapps.herokuapp.com/android/<%=@article.slug%>' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-facebook'></i>Facebook</a></li>
+						    	<li><a class='facebook' href='http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-facebook'></i>Facebook</a></li>
 						    </div>
 						    <div class="col-xs-4 col-sm-12 col-md-12 col-lg-12">
 						    <li><a class='twitter' href='https://twitter.com/intent/tweet?url=http://alextorressk.blogspot.com&text=AlexTorresSk&via=AlexTorresSk&hashtags=TuBlogDeTech' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-twitter'></i>Twitter</a></li>
