--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -53,7 +53,7 @@
 						    </div>
 
 						    <div class="col-xs-4 col-sm-12 col-md-12 col-lg-12">
-						    <li><a class='gplus' href='http://plus.google.com/share?url=http://alextorressk.blogspot.com' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-google-plus'></i>Google+</a></li>
+						    <li><a class='gplus' href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-google-plus'></i>Google+</a></li>
 						    </div>
 					    </div>
 					</div>
