--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
    <%= meta_tags %>
+   <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
