este es otro mas

--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -5,7 +5,7 @@
 				<% if user_signed_in?%>
 					<li class="li-nav"><%= link_to edit_user_registration_path do%>
 						<i class="fa fa-pencil ico-nav"></i>
-						<span class="font-nav">Edirtar Perfil</span><%end%>
+						<span class="font-nav">Editar Perfil</span><%end%>
 					</li>
 					<li class="li-nav"><%= link_to destroy_user_session_path, method: :delete do%>
 						<i class="fa fa-sign-out ico-nav"></i>
