este es otro mas

--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -55,7 +55,7 @@
 			<div class="relative">
 				<%= link_to root_path,:class=>'brand-logo' do%>
 				<div class="absolute" style="height:64px;">
-					<img src="http://compumexicopc.webcindario.com/images/logo.png">
+					<img src="http://compumexicopc.webcindario.com/images/logo.png" alt="logo">
 				</div>
 				<div class="relative hide-on-small-only">
 					<em>DownloadApps</em>
