este es otro mas

--- a/app/views/parciales/_footer.html.erb
+++ b/app/views/parciales/_footer.html.erb
@@ -38,6 +38,4 @@
    </div>
 </footer>
 <!--Google-->
-<script src="https://apis.google.com/js/platform.js" async defer>
-  {lang: 'es-419'}
-</script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
