--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -49,7 +49,7 @@
 						    	<li><a class='facebook' href='http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-facebook'></i>Facebook</a></li>
 						    </div>
 						    <div class="col-xs-4 col-sm-12 col-md-12 col-lg-12">
-						    <li><a class='twitter' href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>&text=dowloadapps&via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-twitter'></i>Twitter</a></li>
+						    <li><a class='twitter' href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/android/<%=@article.slug%>&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class='fa fa-twitter'></i>Twitter</a></li>
 						    </div>
 
 						    <div class="col-xs-4 col-sm-12 col-md-12 col-lg-12">
