--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
     <ul>
       <li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
 
-      <li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&text=dowloadapps&via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li>
+      <li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li>
 
       <li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li>
     </ul>
