este es otro mas

--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -5,13 +5,13 @@
     
       <div class="input-field col s12">
         <i class="material-icons prefix">account_circle</i>
-        <%= f.text_field :username, :autofocus=>true ,required:"required"%>
+        <%= f.text_field :username,required:"required"%>
         <%= f.label :username,"Nombre de Usuario" %>
       </div>
 
       <div class="input-field col s12">
         <i class="material-icons prefix">email</i>
-        <%= f.email_field :email, :autofocus=>true ,required:"required"%>
+        <%= f.email_field :email,required:"required"%>
         <%= f.label :email,"Correo Electronico" %>
       </div>
       
