--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-   <%= meta_tags %>
-   <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-   <%= csrf_meta_tags %>
-</head>
+<html lang="es">
+   <head>
+      <%= meta_tags %>
+      <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <%= csrf_meta_tags %>
+   </head>
 <body>
    <%= render "parciales/navegacion" %>
    <% flash.each do |key,msg| %>
