--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
          var js, fjs = d.getElementsByTagName(s)[0];
          if (d.getElementById(id)) return;
          js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=<%=ENV['FB_APP_ID']%>&version=v2.4";
+         js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.4";
+         js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&appId=<%=ENV['FB_APP_ID']%>&version=v2.4";
          fjs.parentNode.insertBefore(js, fjs);
          }(document, 'script', 'facebook-jssdk'));
 
