--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,29 @@
    <script>
       $(document).on('ready page:load', function () {
 
-         (function(d, s, id) {
+         /*(function(d, s, id) {
          var js, fjs = d.getElementsByTagName(s)[0];
          if (d.getElementById(id)) return;
          js = d.createElement(s); js.id = id;
          js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.4";
          js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&appId=<%=ENV['FB_APP_ID']%>&version=v2.4";
          fjs.parentNode.insertBefore(js, fjs);
-         }(document, 'script', 'facebook-jssdk'));
+         }(document, 'script', 'facebook-jssdk'));*/
+         window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '316086441848514',
+            xfbml      : true,
+            version    : 'v2.4'
+          });
+         };
+
+     (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
 
       });
    </script>
