--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -8,7 +8,7 @@
       </div>
 
       <div class="input-field col s12">
-        <i class="material-icons prefix">account_circle</i>
+        <i class="material-icons prefix">vpn_key</i>
         <%= f.password_field :password, autocomplete: "off",:id=>"users_password" %>
         <%= f.label :password,"Contraseña" %>
       </div>
