--- a/app/views/articles/_sliderpatallacompleta.html.erb
+++ b/app/views/articles/_sliderpatallacompleta.html.erb
@@ -1,6 +1,6 @@
 	<div class="slider">
 		<ul class="slides ">
-			<% @articles.each do |article|%>
+			<% @articles_visit.each do |article|%>
 				<li> 
 					<img style="width: 100%; height: 100%; background-size: 100% 100%;" src="<%= article.image.url(:index_slider)%>" alt="<%= article.title %>"> <!-- random image -->
 					<div class="caption left-align">
