--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,15 @@ body{
 	overflow-x: hidden;
 
 }
+.dropdown-content li>a, .dropdown-content li>span{
+	display: inline-block !important;
+	&:hover{
+		background-color:transparent;
+	}
+}
+.color-dow{
+	color: #757575 !important;
+}
 .fullScreen{
 	width: 100%;
 	height: 100%;
