--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -21,7 +21,7 @@
 		</div>
 		<div class="card-content">
 			<div class="card-title activator grey-text text-darken-4 titulo">
-				<%= link_to article.title.truncate(40), article%>
+				<h2><%= link_to article.title.truncate(40), article%></h2>
 				<i class="material-icons right">more_vert</i>
 			</div>
 			<div class="index-icon">
