--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,7 @@
 <div class="row  marin-top center-xs">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+		<%= render "articles/sliderpatallacompleta" %>
+	</div>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
 		<div class="row">
 			<div class="col-xs center">
