--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding marin-top">
 		<div class="row">
-			<div class="col-xs center">
+			<div class="col-xs center cero-padding ">
 				<h4 class="fondos_h text-shadow left-align" ><%= link_to "HOME/ANDROID/",root_path%></h4>
 				<h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
 				<main class="sombras" >		
