--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,7 +24,8 @@
 
 <div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
     <a class="btn-floating btn-large black">
-      <i class="large material-icons">share</i>
+    	<i class="fa fa-share-alt"></i>
+      
     </a>
     <ul>
       <li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li>
