--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,6 @@
    <head>
       <%= meta_tags %>
       <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -43,7 +41,7 @@
    <!-- Modal Structure -->
    <div id="modal1" class="modal">
       <div class="modal-footer">
-         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="material-icons">clear</i></a>
+         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
       </div>
       <div class="modal-content ">
          <h4>Log in</h4>
@@ -53,7 +51,7 @@
 
    <div id="modal2" class="modal ">
       <div class="modal-footer">
-         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="material-icons">clear</i></a>
+         <a class="modal-action modal-close waves-effect waves-green btn-flat "><i class="fa fa-times"></i></a>
       </div>
       <div class="modal-content">
          <h4>Registro</h4>
