--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -2,13 +2,13 @@
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12"}) do |f| %>
     <div class="row">
       <div class="input-field col s12">
-        <i class="material-icons prefix">email</i>
+        <i class="fa fa-envelope prefix"></i>
         <%= f.email_field :email, autofocus: true,:id=>"users_email" %>
         <%= f.label :email,"Correo electronico" %>
       </div>
 
       <div class="input-field col s12">
-        <i class="material-icons prefix">vpn_key</i>
+        <i class="fa fa-user-secret prefix"></i>
         <%= f.password_field :password, autocomplete: "off",:id=>"users_password" %>
         <%= f.label :password,"Contraseña" %>
       </div>
@@ -26,7 +26,7 @@
       <div class="actions col s12 right-align ">
          <button class="btn waves-effect waves-light valign btn-ingresar" type="submit" name="action" style="width: 100%;height:35px;">
          INICIAR SESIÓN
-          <i class="material-icons right">send</i>
+          <i class="fa fa-paper-plane right"></i>
         </button>
       </div>
       <div class="center-align col s12">
