--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,10 @@ body{
 	overflow-x: hidden;
 
 }
+.fa-ellipsis-v{
+	font-size: 18px !important;
+	padding: 0px 5px 0px 3px !important;
+}
 .dropdown-content li>a, .dropdown-content li>span{
 	display: inline-block !important;
 	&:hover{
@@ -111,7 +115,7 @@ body{
 	span{
 		position: absolute;
 		left: 0px;
-		top: 6px;
+		top: 0px;
 		padding-left: .5em !important;
 		i{
 			letter-spacing: .3em;
@@ -308,7 +312,13 @@ footer{
 }
 
 nav{
-	background-color: rgba(3, 169, 244, .8);
+	background-color: rgb(3, 169, 244);
+	.button-collapse{
+		i{
+			font-size: 2rem !important;
+			padding: 0px 1rem !important;
+		}
+	}
 }
 .relative{
 	position:relative;
