--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -38,7 +38,7 @@
 						<% end %>
 					</div>
 					<div class="valign-wrapper">
-						<a href="<%=@article.link_des%>" class="waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="material-icons right ">cloud_download</i>DESCARGAR <%=@article.tamano%>MB</a>
+						<a href="<%=@article.link_des%>" class="waves-effect waves-light btn-large marin-top " style="width:100%; height:4em !important;"><i class="fa fa-download right"></i>DESCARGAR <%=@article.tamano%>MB</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 right">
