--- a/app/views/parciales/_new.html.erb
+++ b/app/views/parciales/_new.html.erb
@@ -4,20 +4,20 @@
     <div class="row">
     
       <div class="input-field col s12">
-        <i class="material-icons prefix">account_circle</i>
+        <i class="fa fa-user prefix"></i>
         <%= f.text_field :username,required:"required"%>
         <%= f.label :username,"Nombre de Usuario" %>
       </div>
 
       <div class="input-field col s12">
-        <i class="material-icons prefix">email</i>
+        <i class="fa fa-envelope prefix"></i>
         <%= f.email_field :email,required:"required"%>
         <%= f.label :email,"Correo Electronico" %>
       </div>
       
 
       <div class="input-field col s12">
-        <i class="material-icons prefix">vpn_key</i>
+        <i class="fa fa-user-secret prefix"></i>
         <% if @minimum_password_length %>
         <em><% @minimum_password_length %></em>
         <% end %><br />
@@ -28,7 +28,7 @@
       </div>
 
       <div class="input-field col s12">
-        <i class="material-icons prefix">vpn_key</i>
+        <i class="fa fa-user-secret prefix"></i>
         <%= f.password_field :password_confirmation, autocomplete: "off" ,required:"required"%>
         <%= f.label :password_confirmation,"Confirmar Contreseña" %>
       </div>
@@ -37,7 +37,7 @@
        <div class="actions col s12 right-align ">
          <button class="btn waves-effect waves-light valign btn-ingresar" type="submit" name="action" style="width: 100%;height:35px;">
          CREAR CUENTA
-          <i class="material-icons right">send</i>
+         <i class="fa fa-paper-plane right"></i>
         </button>
       </div>
     </div>
