--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
       <%= meta_tags %>
       <link rel="icon" type="image/png" href="http://compumexicopc.webcindario.com/images/logo.png" />
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-      <%= javascript_include_tag 'application',defer: true,async: true, 'data-turbolinks-track' => true%>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true%>
       <%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
       <%= csrf_meta_tags %>
    </head>
