--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -158,6 +158,12 @@ aside{
     bottom: 0!important;
     left: 0 !important;
     width: 100% !important;
+    h3{
+    	transform: translateX(87px);
+    	a{
+
+    	}
+    }
 }
 .side-nav li a{
 	&:hover{
