--- a/app/views/articles/_sliderpatallacompleta.html.erb
+++ b/app/views/articles/_sliderpatallacompleta.html.erb
@@ -4,7 +4,7 @@
 				<li> 
 					<img style="width: 100%; height: 100%; background-size: 100% 100%;" src="<%= article.image.url(:index_slider)%>" alt="<%= article.title %>"> <!-- random image -->
 					<div class="caption left-align">
-						<h3 style="font-size:1.5em; padding-left:1em;" ><%= link_to article.title, article, :class=>"light grey-text text-lighten-3"%></h3>
+						<h3 style="font-size:1.5em; text-align:center;" ><%= link_to article.title, article, :class=>"light grey-text text-lighten-3"%></h3>
 					</div>
 				</li>
 			<%end %>
