--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
    <div class="fixed-action-btn right-align" style="bottom: 76.5%; right: 0px;">
       <%if can? :new, @article%>
          <%= link_to new_article_path, :class =>"btn-floating btn-large red" do%>
-            <i class="material-icons">add</i>
+            <i class="fa fa-plus"></i>
          <%end%>
       <%end%>
    </div>
