--- a/app/views/parciales/_tags.html.erb
+++ b/app/views/parciales/_tags.html.erb
@@ -10,6 +10,9 @@
 							<%end%>
 						<%end%>
 					</div>
+					<%= link_to edit_tag_path(tag) do%>
+					<i class="fa fa-pencil-square-o"></i>
+				<%end%>
 				</div>
 			</div>
 		<% end %>
