--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,81 @@
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "sliderpatallacompleta" %>
 	</div>
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+		<div class="row center">
+			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+			    <div class="button facebook slide_x">
+			        <div class="icon">
+			        	<i class="fa fa-facebook fa-lg"></i>
+			        </div>
+			        <div class="slide">
+			            <span>
+			                facebook
+			            </span>
+			        </div>
+			        <div class="native_button">
+			          <div>
+			        	<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
+			          </div>
+			      </div>
+			    </div>
+		    </div>
+		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+			    <div class="button twitter slide_y">
+			        <div class="icon">
+			        	<i class="fa fa-twitter fa-lg"></i>
+			        </div>
+			        <div class="slide">
+			            <span>
+			                twitter
+			            </span>
+			        </div>
+			        <div class="native_button">
+			          <div>
+			          	<a href="https://twitter.com/dowloadapps" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dowloadapps</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+						</script>
+			          </div>
+			      </div>
+			    </div>
+		    </div>
+		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+			    <div class="button youtube slide_nx">
+			        <div class="icon">
+			        	<i class="fa fa-youtube"></i>
+			        </div>
+			        <div class="slide">
+			            <span>
+			                youtube
+			            </span>
+			        </div>
+			               <div class="native_button">
+			        <div>
+			        	<div class="g-ytsubscribe" data-channelid="UC-TB9hL7FXEP2XXY1_0HFSQ" data-layout="default" data-count="default"></div>      
+			        </div>
+			      </div>
+			    </div>
+		    </div>
+		    <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
+			  	<div class="button gplus slide_ny">
+			        <div class="icon">
+			        	<i class="fa fa-google"></i>
+			        </div>
+			        <div class="slide">
+			            <span>
+			                google
+			            </span>
+			        </div>
+			        <div class="native_button">
+						<div>
+							<!-- Inserta esta etiqueta donde quieras que aparezca Botón +1. -->
+							<div class="g-plusone" data-href="http://dowloadapps.herokuapp.com/"></div>
+			          	</div>
+			      	</div>
+			    </div>
+			</div>
+		</div>
+	</div>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding marin-top">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
