--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,125 @@ ul li form input{left:50%!important;top:50%!important;width:20px!important;heigh
 
 /*Redes sociales botones*/
 a,a:hover{text-decoration:none;cursor:pointer}.share-post{text-align:center;padding:25px 0 0;font-family:'Roboto Condensed',sans-serif}.widget .post-body &gt; .share-post ul{padding:0}.share-post li{display:inline-block;margin:0 1% 15px;padding:0;list-style:none;position:relative;transition:all ease-out .2s;width:100%}.share-post li a{padding:5px 15px 6px 38px;color:#fff;display:block;font-size:15px;font-weight:700;line-height:22px;border-radius:10px 3px;text-shadow:2px 2px rgba(0,0,0,0.1);box-shadow:0 0 2px rgba(0,0,0,0.12),0 2px 4px rgba(0,0,0,0.24);transition:all .6s ease-out}.share-post li .facebook{background:#3b5998}.share-post li .twitter{background:#19bfe5}.share-post li .gplus{background:#d64136}.share-post li .fa:before{position:absolute;top:0;left:0;display:inline-block;padding:6.3px 12px;font-family:fontawesome;text-align:center;line-height:20px;font-size:16px}.share-post li:hover{opacity:.8}.share-post li:hover a{color:#fff}.share-post li .fa{display:initial}#share-menu,.share-post li.whatsapp-mobile{display:none}
+
+
+.button {
+  background:#DCE0E0;
+  position:relative;
+  display: inline-block;
+  width:168px;
+  height:40px; 
+  overflow:hidden;
+  -webkit-border-radius:3px;
+  -moz-border-radius:3px;
+  border-radius:3px;
+}
+.button .icon {
+  float:left;
+  z-index:200;
+  position:relative;
+  width:40px;
+  height:40px;
+  -webkit-border-radius:3px 0px 0px 3px;
+  -moz-border-radius:3px 0px 0px 3px;
+  border-radius:3px 0px 0px 3px;
+  background-repeat:no-repeat;
+  text-align: center !important;
+  vertical-align: middle;
+}
+.button .icon i{
+	color: #eee !important;
+	vertical-align: -webkit-baseline-middle !important;
+}
+.button .native_button {
+  right: 0px;
+  width:110px!important;
+  height:40px!important;
+  float:left!important;
+  background:#DCE0E0 !important;
+  display:table!important;
+}
+.button .native_button > div {
+  display:table-cell!important;
+  vertical-align:middle!important;
+  text-align:center!important;
+}
+.button .slide {
+  position:absolute!important;
+  right:0!important;
+  top:0!important;
+  z-index:100!important;
+  float:left!important;
+  width:128px!important;
+  height:40px!important;
+  transition:.2s transform linear;
+  -webkit-transition:.2s -webkit-transform linear;
+  -moz-transition:.2s -moz-transform linear;
+}
+.button .slide span {
+  color:#fff!important;
+  display:block!important;
+  cursor:default!important;
+  width:100%!important;
+  text-align:center!important;
+  margin:10px 0!important;
+  font-size:16px!important;
+  border-left:1px solid rgba(255,255,255,0.35)!important;
+}
+/* Transitions */
+.button.slide_x:hover .slide {
+  -webkit-transform:translateX(110px);
+  -moz-transform:translateX(110px);
+  transform:translateX(130px);
+}
+.button.slide_nx:hover .slide {
+  -webkit-transform:translateX(-110px);
+  -moz-transform:translateX(-110px);
+  transform:translateX(-125px);
+}
+.button.slide_y:hover .slide {
+  -webkit-transform:translateY(40px);
+  -moz-transform:translateY(40px);
+  transform:translateY(40px);
+}
+.button.slide_ny:hover .slide {
+  -webkit-transform:translateY(-40px);
+  -moz-transform:translateY(-40px);
+  transform:translateY(-40px);
+}
+/*========================*/
+/*=== Colors ===*/
+
+/* FACEBOOK */
+.button.facebook .icon {
+  background-position:-40px 0;
+}
+.button.facebook > div {
+  background-color:#305c99;
+}
+/* TWITTER */
+.button.twitter .icon {
+  background-position:0 0;
+}
+.button.twitter > div {
+  background-color:#00cdff;
+}
+/* YOUTUBE */
+.button.youtube .icon {
+  background-position:-80px 0;
+}
+.button.youtube > div {
+  background-color:#e22b26;
+}
+/* GOOGLE PLUS */
+.button.gplus .icon {
+  background-position:0 -40px;
+}
+.button.gplus > div {
+  background-color:#3f3d3e;
+}
+
+
+
+
+/*==============*/
