--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,6 +16,7 @@
 			        </div>
 			        <div class="native_button">
 			          <div>
+			          	<script id="facebook-jssdk" type="text/javascript" async defer src="//connect.facebook.net/en_US/all.js"></script>
 			        	<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
 			          </div>
 			      </div>
@@ -33,6 +34,7 @@
 			        </div>
 			        <div class="native_button">
 			          <div>
+			          	<script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
 			          	<a href="https://twitter.com/dowloadapps" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dowloadapps</a>
 			          </div>
 			      </div>
