--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,26 @@
 			        </div>
 			        <div class="native_button">
 			          <div>
-			          	<script id="facebook-jssdk" type="text/javascript" async defer src="http://connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=316086441848514"></script>
+			          	<script>
+						  window.fbAsyncInit = function() {
+						    FB.init({
+						      appId      : '316086441848514',
+						      xfbml      : true,
+						      version    : 'v2.5'
+						    });
+						  };
+
+						  (function(d, s, id){
+						     var js, fjs = d.getElementsByTagName(s)[0];
+						     if (d.getElementById(id)) {return;}
+						     js = d.createElement(s); js.id = id;
+						     js.async=true;
+						     js.src = "//connect.facebook.net/en_US/sdk.js";
+						     fjs.parentNode.insertBefore(js, fjs);
+						   }(document, 'script', 'facebook-jssdk'));
+						</script>
+
+
 			        	<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
 			          </div>
 			      </div>
