--- a/app/views/parciales/_footer.html.erb
+++ b/app/views/parciales/_footer.html.erb
@@ -20,7 +20,7 @@
          <div class="row">
             <div class="col-xs-11">
                <p class="grey-text text-lighten-4 left-align cero-margin-top">
-                  <img src="http://res.cloudinary.com/alfredhdz/image/upload/v1442242514/g8dxbttcokyfr6y1kzsh.jpg" alt="autor" class=" circle responsive-img avatar">
+                  <img src="http://res.cloudinary.com/alfredhdz/image/upload/c_scale,w_150/v1442242514/g8dxbttcokyfr6y1kzsh.jpg" alt="autor" class=" circle responsive-img avatar">
                   Mi nombre es Alfred Hdz soy un aficionado ala programacion. Cree este sitio con el fin de apoyar y compartir aplicaciones de manera libre.
                </p>
                <p class="grey-text text-lighten-4 left-align">si te quieres unir a este proyecto manda un correo electronico a "alfredocruz9292@gmail.com"</p>
