--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
 		<%= render "sliderpatallacompleta" %>
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
-		<div class="row center">
+		<div class="row center cero-margin">
 			<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 cero-padding">
 			    <div class="button facebook slide_x">
 			        <div class="icon">
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding marin-top">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<div class="row">
 			<div class="col-xs center cero-padding ">
 				<h4 class="fondos_h text-shadow left-align" ><%= link_to "HOME/ANDROID/",root_path%></h4>
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10  marin-top">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10  marin-top cero-padding">
   		<%= render "aside"%>
   	</div>
 </div>
