--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row center-xs">
-	<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+	<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 cero-padding">
 		<%= render "parciales/tags" %>
 	</div>
 </div>
