--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 
-		<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
+		<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 	  		<%= render "articles/aside" %>
 	  	</div>
 </div>
