--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true%>
       <%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/") %>
       <%= csrf_meta_tags %>
+      <meta name="google-site-verification" content="-HDR1fDXBp8byMOmnTAZie004nw0WfnpBKP5AJ_Q0QU" />
    </head>
 <body>
    <%= render "parciales/navegacion" %>
