--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,7 @@
 <div class="row center-xs">
+
+  		<%= render "parciales/tags"%>
+
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "sliderpatallacompleta" %>
 	</div>
@@ -90,9 +93,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10  marin-top cero-padding">
-  		<%= render "aside"%>
-  	</div>
+	
 </div>
 <%= render "parciales/footer" %>
 
