--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <div class="row marin-top center-xs">
+		<%= render "parciales/tags" %>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 ">
 		<h4 class="fondos_h text-shadow" ><%= link_to "HOME/ANDROID/",root_path%><%= link_to @article.title, @article%></h4>
 		<main class=" center-align sombras" >						
@@ -106,8 +107,6 @@
 		</div>
 	</div>
 	
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10">
-		<%= render "aside" %>
-	</div>
+	
 </div>
 <%= render "parciales/footer" %>
