--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,5 @@
 <div class="row center-xs">
+	<%= render "parciales/tags" %>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 		<%= render "articles/sliderpatallacompleta" %>
 	</div>
@@ -15,9 +16,5 @@
 			</div>
 		</div>
 	</div>
-
-		<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
-	  		<%= render "articles/aside" %>
-	  	</div>
 </div>
 <%= render "parciales/footer" %>
