--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
       <meta name="google-site-verification" content="-HDR1fDXBp8byMOmnTAZie004nw0WfnpBKP5AJ_Q0QU" />
    </head>
 <body>
+  <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
    <%= render "parciales/navegacion" %>
 
     <% if notice %>
