--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -203,7 +203,6 @@ aside{
 	border: 1px solid #d5d5d5;
 	display: inline-block;
 	img{
-		padding: 1em 1em 0em 1em;
 		position: relative;
 		height: 8em;
 	}
@@ -219,7 +218,8 @@ aside{
 			font-size: 4.5rem !important;
 		}
 		a{
-			font-family: 'Old Standard TT', serif !important;
+			font-family: 'Roboto', sans-serif;
+			text-transform: lowercase!important;
 			font-size: .2em !important;
 			width: 100% !important;
 			display: block !important;
@@ -266,6 +266,7 @@ aside{
 		font-size: .8em !important;
 		p{
 			margin: .5em 0 0 0 !important;
+			line-height: 1.3;
 		}
 	}
 }
@@ -283,6 +284,17 @@ aside{
 		font-size: .8em !important;
 		&:hover{
 			text-decoration: underline;
+		}
+	}
+	i{
+		text-shadow: 	0px 0px 0px #585858,
+						0px 0px 0px #585858,
+						0px 0px 0px #585858,
+						0px 0px 0px black;
+		height: 100%;
+		width: 3%;
+		&:hover{
+			color: #0288d1;
 		}
 	}
 }
