--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,16 @@
    </head>
 <body>
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
-   <%= render "parciales/navegacion" %>
-
+    <%= render "parciales/navegacion" %>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- dowloadapps -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-5053365791951337"
+         data-ad-slot="2157240206"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <% if notice %>
       <div id="flash-message" class="flash-message green">
         <button type="button" class="close">&times;</button>
