--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -92,27 +92,20 @@
 			</div>
 		</div>
 	</div>
-
-	
-			
-				<% @articles_juegos.each do |tag| %>
-				<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
-				<div class="row">
+	<% @articles_juegos.each do |tag| %>
+		<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+			<div class="row">
 				<div class="col-xs center cero-padding ">
-					<h4 class="fondos_h text-shadow left-align" >Categoria: <%=link_to tag.name,tag%><a href="/category/juegos"><i class="fa fa-share right"></i></a></h4>
+					<h4 class="fondos_h text-shadow left-align" >Categoria: <%=link_to tag.name,tag%><!--<a href="/category/juegos"><i class="fa fa-share right"></i></a>--></h4>
 					<main class="sombras" >	
-			  			<% tag.articles.each do |article| %>
+			  			<% tag.articles.limit(6).each do |article| %>
 			    			<%=render partial: "article" , locals: { article: article } %>
 						<% end %>
 			  		</main>
 			  	</div>
-			  	</div>
-				</div>
-
-				<% end %>
-			
-		
-
+		  	</div>
+		</div>
+	<% end %>
 </div>
 <%= render "parciales/footer" %>
 
