--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,13 @@
     <%= render "parciales/navegacion" %>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- dowloadapps -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-5053365791951337"
-         data-ad-slot="2157240206"></ins>
+    <div class="col-xs center">
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:728px;height:90px"
+           data-ad-client="ca-pub-5053365791951337"
+           data-ad-slot="2157240206">
+      </ins>
+    </div>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
