--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -92,7 +92,7 @@
 			</div>
 		</div>
 	</div>
-	<% @articles_juegos.each do |tag| %>
+	<% @category_where.each do |tag| %>
 		<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
 			<div class="row">
 				<div class="col-xs center cero-padding ">
