--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -5,6 +5,13 @@ body{
 	text-rendering:optimizeLegibility;
 	overflow-x: hidden;
 }
+
+.colection-tags{
+	&:hover{
+		background-color:#039be5!important;
+		transition: all 0.5s ease;
+	}
+}
 .fa-ellipsis-v{
 	font-size: 18px !important;
 	padding: 0px 5px 0px 3px !important;
